[package]
name = "xvm-sdk-erc20-sample"
version = "0.1.0"
authors = ["Astar Network"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.4.0", default-features = false }
ink_metadata = { version = "3.4.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", default-features = false }
ink_lang = { version = "3.4.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

xvm-sdk-erc20 = { path = "./xvm-sdk/erc20", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "xvm_sdk_erc20_sample"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "xvm-sdk-erc20/std",
]
ink-as-dependency = []


[workspace]
members = [
    "xvm-sdk",
    "xvm-sdk/**",
]
