[package]
name = "xvm-sdk-psp22-wrapper"
version = "0.1.0"
authors = ["Astar Network"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, features = [
    "derive",
], optional = true }

xvm-helper = { path = "../../lib/helper", default-features = false }
xvm-sdk-psp22-controller = { path = "../psp22-controller", default-features = false, features = [
    "ink-as-dependency",
] }
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = [
    "psp22",
] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "xvm-helper/std",
    "openbrush/std",
    "xvm-sdk-psp22-controller/std",
]
ink-as-dependency = []
