[package]
name = "xvm-sdk-helper"
version = "0.1.0"
authors = ["Astar Network"]
edition = "2021"

[dependencies]
ink_env = { version = "3.4.0", default-features = false }
ink_lang = { version = "3.4.0", default-features = false }
ink_prelude = { version = "3.4.0", default-features = false }
hex-literal = "0.3"
ethabi = { git = "https://github.com/akru/ethabi", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

openbrush = { tag = "v2.3.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false }

[lib]
name = "xvm_sdk_helper"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink_env/std",
    "ink_lang/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std"
]
ink-as-dependency = []