[package]
name = "xvm-sdk-psp34-wrapper"
version = "0.1.0"
authors = ["Astar Network"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.4.0", default-features = false }
ink_metadata = { version = "3.4.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", default-features = false }
ink_lang = { version = "3.4.0", default-features = false }
ink_prelude = { version = "3.4.0", default-features = false }
ethabi = { git = "https://github.com/akru/ethabi", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

xvm-sdk-helper = { path = "../../lib/xvm-helper", default-features = false }
xvm-sdk-psp34-controller = { path = "../psp34-controller", default-features = false, features = ["ink-as-dependency"] }
openbrush = { tag = "v2.3.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp34"] }

[lib]
name = "xvm_sdk_psp34_wrapper"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "xvm-sdk-helper/std",
    "openbrush/std",
    "xvm-sdk-psp34-controller/std",
]
ink-as-dependency = []
