[package]
name = "xvm-sdk-psp22-wrapper"
version = "0.1.0"
authors = ["Astar Network"]
edition = "2021"

[dependencies]
ink = { version = "4.3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5", default-features = false, features = [
    "derive",
], optional = true }

xvm-helper = { path = "../../lib/helper", default-features = false }

au-ce-getters = { path = "../../lib/au-ce", default-features = false }

openbrush = { tag = "4.0.0", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = [
    "psp22",
] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "xvm-helper/std",
    "openbrush/std",
    "au-ce-getters/std"
]
ink-as-dependency = []
