[package]
name = "au-ce-getters"
version = "0.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/ink-test-contracts"

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }
unified-accounts-chain-extension-types = { git = "https://github.com/AstarNetwork/Astar", version = "0.1.0", default-features = false }

# substrate
sp-core = { version = "25.0.0", default-features = false }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "sp-core/std",
    "unified-accounts-chain-extension-types/std",
]
ink-as-dependency = []
e2e-tests = []